cleaned up publications a little more
jpg/png seem fine (esp. jpg).
have issues with .tiff

--- a/public/404.html
+++ b/public/404.html
@@ -249,7 +249,11 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/pspa-actinobacteria/">Variations on a theme: evolution of the phage-shock-protein system in Actinobacteria.</a></li>
+    <li><a href="/publication/psp-evolution/">The evolution, conservation, and covariation of the bacterial Psp envelope-stress-response system</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/pspa-actino/">Variations on a theme: evolution of the phage-shock-protein system in Actinobacteria.</a></li>
   </ul>
   
   <ul>
@@ -258,6 +262,10 @@
   
   <ul>
     <li><a href="/publication/psp-mtb/">The Psp system of Mycobacterium tuberculosis integrates envelope stress-sensing and envelope-preserving functions.</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/vitd/">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection.</a></li>
   </ul>
   
   
@@ -277,7 +285,7 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/psp-actino/">PspA in Actinobacteria</a></li>
+    <li><a href="/project/stress-response/">PspA in Actinobacteria</a></li>
   </ul>
   
   <ul>
