cleaned up project page and links to projects
blogdown::build_site() still doesn't run without errors

--- a/public/publication/psp-mtb/index.html
+++ b/public/publication/psp-mtb/index.html
@@ -366,7 +366,9 @@
 
 
 
- 
+  
+    Please check that the `projects` parameter in the front matter of content in `content/publication/` refers to an existing filename (without .md extension) of a published project.
+  
 
 
 
