--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -242,7 +242,7 @@
   </div>
   <div class="talk-metadata">
     
-            Academic Theme Conference
+            ISMB (ISCB)
     
   </div>
   <div class="talk-links">
@@ -254,7 +254,9 @@
 
 
 
-
+  
+    Please check that the `projects` parameter in the front matter of content in `content/talk/` refers to an existing filename (without .md extension) of a published project.
+  
 
 
 
