--- a/public/publication/sigfac-mtb/index.html
+++ b/public/publication/sigfac-mtb/index.html
@@ -366,7 +366,9 @@
 
 
 
- 
+  
+    Please check that the `projects` parameter in the front matter of content in `content/publication/` refers to an existing filename (without .md extension) of a published project.
+  
 
 
 
