--- a/public/talk/2018-ismb-iscb/index.html
+++ b/public/talk/2018-ismb-iscb/index.html
@@ -322,9 +322,9 @@
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
-            
-            Academic Theme Conference
-            
+            <a href="https://www.iscb.org/ismb2018" target="_blank" rel="noopener">
+            ISMB (ISCB)
+            </a>
           </div>
         </div>
       </div>
@@ -362,7 +362,9 @@
 
 
 
-
+  
+    Please check that the `projects` parameter in the front matter of content in `content/talk/` refers to an existing filename (without .md extension) of a published project.
+  
 
 
 
