cleaned up tags on publication & post pages
- updated images
- cleaned up tags, tabs
- cleaned up publication, project md files with static icons/images

Unresolved
- Linking to projects
- making fa icon pack work
- showing all posts and publications in a separate page

--- a/public/404.html
+++ b/public/404.html
@@ -103,7 +103,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/"><img src="/img/Me_at_work.jpg" alt="Janani Ravi"></a>
+      <a class="navbar-brand" href="/"><img src="/img/bookhat-profilepic.jpg" alt="Janani Ravi"></a>
     </div>
 
     
@@ -246,7 +246,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/useful-git-github-links/">Useful Git/GitHub links</a></li>
+    <li><a href="/post/usefulgit/github-links/">Useful Git/GitHub links</a></li>
   </ul>
   
   <ul>
@@ -272,15 +272,15 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/variations-on-a-theme-evolution-of-the-phage-shock-protein-system-in-actinobacteria./">Variations on a theme: evolution of the phage-shock-protein system in Actinobacteria.</a></li>
+    <li><a href="/publication/variations-on-a-theme-evolution-of-the-phage-shock-protein-system-in-actinobacteria/">Variations on a theme: evolution of the phage-shock-protein system in Actinobacteria</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/reconstruction-and-topological-characterization-of-the-sigma-factor-regulatory-network-of-mycobacterium-tuberculosis./">Reconstruction and topological characterization of the sigma factor regulatory network of Mycobacterium tuberculosis.</a></li>
+    <li><a href="/publication/reconstruction-and-topological-characterization-of-the-sigma-factor-regulatory-network-of-mycobacterium-tuberculosis/">Reconstruction and topological characterization of the sigma factor regulatory network of Mycobacterium tuberculosis</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/the-psp-system-of-mycobacterium-tuberculosis-integrates-envelope-stress-sensing-and-envelope-preserving-functions./">The Psp system of Mycobacterium tuberculosis integrates envelope stress-sensing and envelope-preserving functions.</a></li>
+    <li><a href="/publication/the-psp-system-of-mycobacterium-tuberculosis-integrates-envelope-stress-sensing-and-envelope-preserving-functions/">The Psp system of Mycobacterium tuberculosis integrates envelope stress-sensing and envelope-preserving functions</a></li>
   </ul>
   
   <ul>
@@ -304,11 +304,11 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/stress-response-systems/">Stress response systems</a></li>
+    <li><a href="/project/stress-response/">Stress response</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/external-project/">External Project</a></li>
+    <li><a href="/project/dynamical-systems/">Dynamical Systems</a></li>
   </ul>
   
   
