--- a/public/project/external-project/index.html
+++ b/public/project/external-project/index.html
@@ -311,7 +311,7 @@
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="/tags/demo/">demo</a>
+  <a class="btn btn-primary btn-outline" href="/tags/dynamical-systems/">dynamical-systems</a>
   
 </div>
 
