--- a/public/publication/reconstruction-and-topological-characterization-of-the-sigma-factor-regulatory-network-of-mycobacterium-tuberculosis./index.html
+++ b/public/publication/reconstruction-and-topological-characterization-of-the-sigma-factor-regulatory-network-of-mycobacterium-tuberculosis./index.html
@@ -260,7 +260,7 @@
     <h1 itemprop="name">Reconstruction and topological characterization of the sigma factor regulatory network of Mycobacterium tuberculosis.</h1>
     <span class="pub-authors" itemprop="author">
       
-      Rinki Chauhan, Janani Ravi, Pratik Datta, Tianlong Chen, Dirk Schnappinger, Kevin E Bassler, Gabor Balázsi, Maria L Gennaro
+      R Chauhan, <em>J Ravi</em>, P Datta, T Chen, D Schnappinger, KE Bassler, G Balázsi, ML Gennaro
       
     </span>
     <span class="pull-right">
