--- a/public/publication/the-psp-system-of-mycobacterium-tuberculosis-integrates-envelope-stress-sensing-and-envelope-preserving-functions./index.html
+++ b/public/publication/the-psp-system-of-mycobacterium-tuberculosis-integrates-envelope-stress-sensing-and-envelope-preserving-functions./index.html
@@ -260,7 +260,7 @@
     <h1 itemprop="name">The Psp system of Mycobacterium tuberculosis integrates envelope stress-sensing and envelope-preserving functions.</h1>
     <span class="pub-authors" itemprop="author">
       
-      Pratik Datta, Janani Ravi, Valentina Guerrini, Rinki Chauhan, Matthew B Neiditch, Scarlet S Shell, Sarah M Fortune, Baris Hancioglu, Oleg A Igoshin, Maria L Gennaro
+      P Datta, <em>J Ravi</em>, V Guerrini, R Chauhan, MB Neiditch, SS Shell, SM Fortune, B Hancioglu, OA Igoshin, ML Gennaro
       
     </span>
     <span class="pull-right">
