--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/"><img src="/img/Me_at_work.jpg" alt="Janani Ravi"></a>
+      <a class="navbar-brand" href="/"><img src="/img/bookhat-profilepic.jpg" alt="Janani Ravi"></a>
     </div>
 
     
