removed 'in' before journal names

--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -371,7 +371,7 @@
   <span itemprop="author">
     <em>J Ravi</em>, V Anantharaman, L Aravind, ML Gennaro</span>.
   <a href="/publication/variations-on-a-theme-evolution-of-the-phage-shock-protein-system-in-actinobacteria/" itemprop="name">Variations on a theme: evolution of the phage-shock-protein system in Actinobacteria</a>.
-  In <em>Anto</em>,
+  <em>Anto</em>,
   2018.
   <p>
 
@@ -422,7 +422,7 @@
   <span itemprop="author">
     R Chauhan, <em>J Ravi</em>, P Datta, T Chen, D Schnappinger, KE Bassler, G Balázsi, ML Gennaro</span>.
   <a href="/publication/reconstruction-and-topological-characterization-of-the-sigma-factor-regulatory-network-of-mycobacterium-tuberculosis/" itemprop="name">Reconstruction and topological characterization of the sigma factor regulatory network of Mycobacterium tuberculosis</a>.
-  In <em>Nat Comm</em>,
+  <em>Nat Comm</em>,
   2016.
   <p>
 
@@ -469,7 +469,7 @@
   <span itemprop="author">
     P Datta, <em>J Ravi</em>, V Guerrini, R Chauhan, MB Neiditch, SS Shell, SM Fortune, B Hancioglu, OA Igoshin, ML Gennaro</span>.
   <a href="/publication/the-psp-system-of-mycobacterium-tuberculosis-integrates-envelope-stress-sensing-and-envelope-preserving-functions/" itemprop="name">The Psp system of Mycobacterium tuberculosis integrates envelope stress-sensing and envelope-preserving functions</a>.
-  In <em>Mol Micro</em>,
+  <em>Mol Micro</em>,
   2015.
   <p>
 
@@ -515,8 +515,8 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     H Salamon, N Bruiners, K Lakehal, L Shi, <em>J Ravi</em>, KD Yamaguchi, R Pine, ML Gennaro</span>.
-  <a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection./" itemprop="name">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection.</a>.
-  In <em>J Imm</em>,
+  <a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection/" itemprop="name">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection</a>.
+  <em>J Imm</em>,
   2014.
   <p>
 
