--- a/public/404.html
+++ b/public/404.html
@@ -284,7 +284,7 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection./">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection.</a></li>
+    <li><a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection/">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection</a></li>
   </ul>
   
   
