--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -272,7 +272,7 @@
   </div>
   
   <div>
-    <h2><a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection./">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection.</a></h2>
+    <h2><a href="/publication/cutting-edge-vitamin-d-regulates-lipid-metabolism-in-mycobacterium-tuberculosis-infection/">Cutting edge: Vitamin D regulates lipid metabolism in Mycobacterium tuberculosis infection</a></h2>
     <div class="article-style">
       
     </div>
