--- a/404.html
+++ b/404.html
@@ -363,6 +363,10 @@
   </ul>
   
   <ul>
+    <li><a href="/post/2019/rlel-upcoming-2019/">2019: RLEL Upcoming Events</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/2019/goodreads-2018/">2018: Year in Books | Goodreads</a></li>
   </ul>
   
@@ -372,10 +376,6 @@
   
   <ul>
     <li><a href="/post/2018/rladies-elansing/">Launching R-Ladies East Lansing!</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/2018/modelers-hippocratic-oath/">Modeler&#39;s Hippocratic Oath</a></li>
   </ul>
   
   
