--- a/group/index.html
+++ b/group/index.html
@@ -527,8 +527,6 @@ iii) Developing tools and resources for seamlessly relating sequence, structure,
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/jobs/">jobs</a>
-  
   <a class="badge badge-light" href="/tags/evolution/">evolution</a>
   
   <a class="badge badge-light" href="/tags/datascience/">datascience</a>
@@ -536,6 +534,10 @@ iii) Developing tools and resources for seamlessly relating sequence, structure,
   <a class="badge badge-light" href="/tags/bioinformatics/">bioinformatics</a>
   
   <a class="badge badge-light" href="/tags/r/">R</a>
+  
+  <a class="badge badge-light" href="/tags/cpathogeno/">cpathogeno</a>
+  
+  <a class="badge badge-light" href="/tags/group/">group</a>
   
 </div>
 
