--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://jravilab.github.io>
+<title>Redirecting to https://jravilab.github.io</title>
 <meta http-equiv="refresh" content="0; URL=https://jravilab.github.io">
 <link rel="canonical" href="https://jravilab.github.io">
